<resources>
    <!--APP名称-->
    <string name="app_name">吃啥</string>

    <string name="simple_done">确定</string>
    <string name="simple_cancel">取消</string>

    <!--主界面文字-->
    <string name="main_menus">菜单管理</string>
    <string name="main_ERROR_no_enabled_menus">当前没有已启用的菜单，无法生成结果</string>
    <string name="main_ERROR_no_permission">当前APP没有必须的权限</string>
    <string name="main_button_permission">申请</string>

    <!--Menu项目的文字-->
    <string name="item_menu_random">随机数量</string>
    <string name="item_menu_enabled">已启用</string>
    <string name="item_menu_disabled">未启用</string>

    <!--Menu列表页面文字-->
    <string name="menu_list_ERROR_dialog_option_number">随机数量不正确</string>
    <string name="menu_list_name" translatable="false">@string/main_menus</string>
    <string name="menu_list_subTitle_header">菜单数量:</string>
    <string name="menu_list_option_refresh">重新读取菜单</string>
    <string name="menu_list_dialog_refresh_message">此操作将移除所有菜单数据，并从本地已储存的文件中重新读取数据！</string>
    <string name="menu_list_dialog_delete_title">是否删除此菜单？</string>
    <string name="menu_list_dialog_delete_yes">删除菜单</string>
    <string name="menu_list_dialog_delete_no">返回</string>
    <string name="menu_list_dialog_edit_title">您是要编辑菜单内容还是修改菜单属性？</string>
    <string name="menu_list_dialog_edit_edit">编辑内容条目</string>
    <string name="menu_list_dialog_edit_option">修改属性</string>
    <string name="menu_list_dialog_option_title">菜单属性设置</string>
    <string name="menu_list_dialog_option_title_random">菜单随机属性设置</string>
    <string name="menu_list_dialog_option_title_enable">此菜单是否参与随机</string>

    <!--Menu编辑页面文字-->
    <string name="menu_edit_ERROR_data">数据错误，无法进行编辑或创建</string>
    <string name="menu_edit_ERROR_menu_existed">已存在相同的菜单</string>
    <string name="menu_edit_ERROR_menu_name">菜单名称为空或包含不可用字符</string>
    <string name="menu_edit_ERROR_menu_save">数据存储失败，请检查储存容量和应用权限</string>
    <string name="menu_edit_ERROR_menu_create_no_foods">食品列表为空，数据不进行保存</string>
    <string name="menu_edit_ERROR_food_create_no_data">食品标题为空，无法储存</string>
    <string name="menu_edit_INFO_menu_save_no_foods">食品列表为空，取消菜单创建</string>
    <string name="menu_edit_INFO_menu_saved">已储存菜单数据</string>
    <string name="menu_edit_mode_title_edit">编辑菜单数据</string>
    <string name="menu_edit_mode_title_create">创建新菜单</string>
    <string name="menu_edit_header_title">菜单标题:</string>
    <string name="menu_edit_hint_title">输入菜单标题 (必填)</string>
    <string name="menu_edit_header_message">菜单简介:</string>
    <string name="menu_edit_hint_message">输入菜单简介</string>
    <string name="menu_edit_dialog_food_edit_title">食品数据</string>
    <string name="menu_edit_dialog_food_edit_hint_title">名称 (必填)</string>
    <string name="menu_edit_dialog_food_edit_hint_message">简介</string>
    <string name="menu_edit_dialog_exit_title">是否更新所有数据？\n点击返回键可继续操作</string>
    <string name="menu_edit_dialog_exit_save">更新数据</string>
    <string name="menu_edit_dialog_exit_unSave">不更新</string>

    <!--结果页面文字-->
    <string name="result_waiting_text">我算算看啊……\n(´・ω・`)</string>
    <string name="result_message">决定了！</string>
    <string name="result_message_1">我们去吃这些！</string>
    <string name="result_owner_header">菜单：</string>
    <string name="result_ERROR_record_name">记录名称为空或包含不可用字符，已使用默认标题</string>
    <string name="result_dialog_input_hit">输入记录名称</string>
    <string name="result_dialog_save">保存记录</string>
    <string name="result_dialog_not_save">不保存</string>
    <string name="result_record_default_name_header">记录 编号:</string>

    <!--记录页面文字-->
    <string name="record_title">历史记录管理</string>
    <string name="record_dialog_deleting_title">是否删除这条记录数据？</string>
    <string name="record_dialog_deleting_yes">删除记录</string>
    <string name="record_dialog_deleting_no" translatable="false">@string/simple_cancel</string>
    <string name="record_deleting_success">成功删除记录</string>
    <string name="record_deleting_fail">记录删除失败，或文件不存在</string>
    <string name="main_about_me">应用作者：OCWVAR\n項目地址：https://github.com/ocwvar\n若您喜欢可以在项目下点个星星哟 :D</string>
    <string name="main_about_switch_umeng">启用友盟统计和错误反馈(重启生效)\n如果您手动打开应用的"电话"权限，将发送更详细的报告</string>

</resources>
