<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_edit_dialog_food_edit_title"
        android:textColor="@color/colorAccent" />

    <EditText
        android:id="@+id/food_edit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/menu_edit_dialog_food_edit_hint_title"
        android:singleLine="true" />

    <EditText
        android:id="@+id/food_edit_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/menu_edit_dialog_food_edit_hint_message" />

</LinearLayout>