<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_list_dialog_option_title_random"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp" />

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/dialog_menu_option_enable_random"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/menu_list_dialog_option_title_enable"
        android:textColor="#616161" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_menu_random"
            android:textColor="#616161" />

        <EditText
            android:id="@+id/dialog_menu_option_random_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="#eaeaea"
            android:ems="2"
            android:gravity="center"
            android:inputType="number"
            android:padding="5dp"
            android:singleLine="true"
            android:text="24"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/dialog_menu_option_random_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="/26"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>